# cxx

./: .gitignore  README
face/: CMakeLists.txt  env-requirements.txt  face_recognition.cpp  faceset_manage.cpp  main.cpp  requirements.txt
face/data/: precision.tree
face/test/: test_annoy.cpp  test_annoy_precision.cpp  test_base64.cpp  test_boost.cpp  test_bson_document.cpp  test_bson_objectId.cpp  test_build_face_index.cpp  test_face_detect_dnn.cpp  test_face_detect_dnn_mmod.cpp  test_flann_example.cpp  test_mongo.cpp  test_uuid.cpp  utils.cpp
face2/: detect_face.py  face_recognition.py  face_recognition2.py  faceset_manage.py  requirments.txt  rest_api.py
face2/test/: test.ann  test_annoy.py  test_basic.py  test_device.py  test_face_recognition.py  test_face_recognition2.py  test_image.py  test_tf_classification.py
robot/: CMakeLists.txt  package.xml
robot/src/camera/: burger.cpp  burger.hpp  cam2image.cpp  showimage.cpp
robot/src/joint/: joint_states.cpp
robot/src/laser/: laser.cpp
robot/src/launch/: lifecycle_demo.launch.py  robot_bringup.launch.py
robot/src/lifecycle/: lifecycle_listener.cpp  lifecycle_service_client.cpp  lifecycle_talker.cpp
robot/src/map/: map_server.cpp
robot/src/msg/: MoveBaseActionGoal.msg
robot/src/navigation/: simple_navigation_goals.cpp
robot/src/odometry/: odometry_publisher.cpp
robot/src/point_cloud/: point_cloud_publisher.cpp
robot/src/state/: state_publisher.cpp
robot/src/test/: add_two_ints_client.cpp  add_two_ints_service.cpp  fibonacci_action_client.cpp  fibonacci_action_server.cpp  listener.cpp  publish_contact.cpp  talker.cpp
robot/src/tf/: tf_broadcaster.cpp  tf_listener.cpp
slam/: CMakeLists.txt  main.cpp  parameters.txt
slam/test/: detectFeatures.cpp  generatePointCloud.cpp  joinPointCloud.cpp  slam.cpp  slamBase.cpp  slamBase.h  slamEnd.cpp  test_opencv.cpp  visualOdometry.cpp
