<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>robot</name>
    <version>0.7.2</version>
    <description>robot</description>
    <maintainer email="karsten@osrfoundation.org">Karsten Knese</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <build_depend>example_interfaces</build_depend>
    <build_depend>rclpy</build_depend>
    <build_depend>rclcpp</build_depend>
    <build_depend>rclcpp_action</build_depend>
    <build_depend>lifecycle_msgs</build_depend>
    <build_depend>rclcpp_lifecycle</build_depend>
    <!--    <build_depend>rcl_interfaces</build_depend>-->
    <!--    <build_depend>rclcpp_components</build_depend>-->
    <build_depend>rcutils</build_depend>
    <build_depend>rmw</build_depend>
    <build_depend>rmw_implementation_cmake</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>action_msgs</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>builtin_interfaces</build_depend>
    <build_depend>rosidl_default_generators</build_depend>
    <build_depend>libopencv-dev</build_depend>


    <exec_depend>ament_index_python</exec_depend>
    <exec_depend>example_interfaces</exec_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>rclcpp_action</exec_depend>
    <exec_depend>rclcpp_lifecycle</exec_depend>
    <exec_depend>lifecycle_msgs</exec_depend>
    <exec_depend>rcl_interfaces</exec_depend>
    <!--    <exec_depend>rclcpp_components</exec_depend>-->
    <exec_depend>rcutils</exec_depend>
    <exec_depend>rmw</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>action_msgs</exec_depend>
    <exec_depend>actionlib_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>ros2run</exec_depend>
    <exec_depend>builtin_interfaces</exec_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <exec_depend>libopencv-dev</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <test_depend>ament_cmake_pytest</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>launch</test_depend>
    <test_depend>launch_testing</test_depend>
    <test_depend>launch_testing_ros</test_depend>
    <test_depend>launch_testing_ament_cmake</test_depend>
    <test_depend>rmw_implementation_cmake</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>